# SaaS-Landing-Page-Copywriter

./: README.md  pyproject.toml
output/: landing_page_copy.md
src/saas_landing_page_copywriter/: crew.py  main.py  streamlit-frontend.py
src/saas_landing_page_copywriter/config/: agents.yaml  tasks.yaml
src/saas_landing_page_copywriter/tools/: hero_copy_length_checker.py
