[project]
name = "saas_landing_page_copywriter"
version = "0.1.0"
description = "SaaS_Landing_Page_Copywriter using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.2,<1.0.0",
    "streamlit>=1.57.0",
]

[project.scripts]
saas_landing_page_copywriter = "saas_landing_page_copywriter.main:run"
run_crew = "saas_landing_page_copywriter.main:run"
train = "saas_landing_page_copywriter.main:train"
replay = "saas_landing_page_copywriter.main:replay"
test = "saas_landing_page_copywriter.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
